Fix: toast will now properly center on mobile screen

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -10,7 +10,7 @@
 .toast-container {
     top: 61px !important;
     padding: 0 !important;
-    width: auto !important;
+    width: 100vw !important;
 
     .toast {
         width: max-content;
